tests/sema/golden/12_ref_array_mix.out
tests/sema/bad/12_ref_array_mix.sg:1:1: error: let initializer: type mismatch (& vs [])
  let a:&int[] = [1,2]; // &int[] нужно трактовать как &(int[]) или & (int) []? Сейчас это & (int[]) — но значение не подходит; покроем ошибкой типов при инициализации
  ^
